--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -45,4 +46,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "com.kakao.sdk:v2-user:2.7.0" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.7.0" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.7.0" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.7.0" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.7.0" // 카카오내비
 }
