--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation "com.kakao.sdk:v2-story:2.7.0" // 카카오스토리
     implementation "com.kakao.sdk:v2-link:2.7.0" // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-navi:2.7.0" // 카카오내비
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
