--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     implementation "com.kakao.sdk:v2-navi:2.7.0" // 카카오내비
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
