네이버지도 라이브러리 추가 - fragment로 화면에 추가
약속 목록 기본 데이터 표시

레이아웃 오류남

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,13 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="13f6ae1232b5e4892d442bad3ebbd8ec"/>
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="13f6ae1232b5e4892d442bad3ebbd8ec"/>
+
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="vw124jgfss" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
