--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation files('libs/libDaumMapAndroid.jar')
+
+    implementation 'com.naver.maps:map-sdk:3.12.0'
+    implementation('com.naver.maps:map-sdk:3.12.0') {
+        exclude group: 'com.android.support'
+
+    }
+
+    implementation 'com.android.support:appcompat-v7:27.0.0'
 }
