--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,7 @@ dependencies {
 
     }
 
-    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    implementation 'com.airbnb.android:lottie:4.1.0'
 }
