약속장소 지도를 크게 보기 위한 UI 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,17 @@
         android:theme="@style/Theme.DataBinding20210910"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ViewMapActivity"
+            android:exported="true" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".EditAppoinmentActivity"
@@ -37,7 +38,7 @@
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
