--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.DataBinding20210910"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".MySettinsgActivity"
+            android:exported="true" />
+        <activity
             android:name=".ViewMapActivity"
             android:exported="true" />
         <activity
