--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.nex3z:flow-layout:1.3.3'
+
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
