--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,10 @@
                     android:scheme="kakao13f6ae1232b5e4892d442bad3ebbd8ec" />
             </intent-filter>
         </activity>
+
+        <service android:name=".services.MyJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
     </application>
 
 </manifest>
