--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,9 @@
         <service android:name=".services.MyJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
 
+        <receiver android:name=".receivers.AlarmReceiver"
+            android:exported="false"/>
+        
     </application>
 
 </manifest>
