--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 
 dependencies {
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     implementation 'com.nex3z:flow-layout:1.3.3'
 
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
