--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@drawable/appointment_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.DataBinding20210910"
-        android:usesCleartextTraffic="true">
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".ModifyAppointmentActivity"
             android:exported="true" />
